<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipe">

    <Button
        android:id="@+id/btn_add2"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="175dp"
        android:layout_height="59dp"
        android:layout_margin="12dp"
        android:onClick="onClick"
        android:padding="8dp"
        android:text="@string/btn_add2"
        android:textColor="@android:color/background_light"
        android:theme="@style/FlatButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/txt_add"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="383dp"
        android:layout_height="183dp"
        android:background="?attr/colorBackgroundFloating"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="10"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.791" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="380dp"
        android:layout_height="45dp"
        android:background="?attr/colorBackgroundFloating"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="123dp"
        android:layout_height="27dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/txt_list_the_steps"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/txt_add_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="168dp"
        android:layout_height="29dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/txt_add_ingredients"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="383dp"
        android:layout_height="183dp"
        android:background="?attr/colorBackgroundFloating"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="10"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388" />

</androidx.constraintlayout.widget.ConstraintLayout>